--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,62 @@
 /* styles go here */
+.personal_information {
+  border: 1px solid black ;
+  padding-bottom: 10px;
+  margin: 20px 0;
+}
+
+.personal-info {
+  display: block;
+  padding-bottom: 10px;
+}
+
+.registration {
+  margin-bottom: 20px;
+}
+
+.regist {
+  display: block;
+  padding-bottom: 10px;
+}
+
+.cats {
+  display: block;
+  padding-bottom: 10px;
+}
+
+.colors {
+  display: block;
+  padding-bottom: 10px;
+}
+
+.time-to-bed {
+  display: block;
+  padding-bottom: 10px;
+}
+
+.car {
+  display: block;
+  padding-bottom: 10px;
+}
+
+.rate-work {
+  display: block;
+  padding-bottom: 10px;
+}
+
+.interesting-fact {
+  margin-bottom: 20px;
+}
+
+.comment {
+  padding-bottom: 10px;
+}
+
+.recommend {
+  display: block;
+  padding-top: 10px;
+}
+
+.edditional-info {
+  margin-bottom: 20px;
+}
