--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,7 @@
-/* styles go here */
+
 .personal_information {
-  border: 1px solid black ;
   padding-bottom: 10px;
-  margin: 20px 0;
+  margin-bottom: 20px;
 }
 
 .personal-info {
@@ -50,11 +49,11 @@
 
 .comment {
   padding-bottom: 10px;
+  display: block;
 }
 
 .recommend {
   display: block;
-  padding-top: 10px;
 }
 
 .edditional-info {
